--- a/Energize.Web/ClientApp/public/index.html
+++ b/Energize.Web/ClientApp/public/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#A51C15">
+    <meta property="og:url" content="http://energize.earu.io/" />
+    <meta property="og:title" content="Energize docs and dashboard" />
+    <meta property="og:description" content="Documentation and dashboard for the Energize Discord bot" />
     <base href="%PUBLIC_URL%/" />
     <!--
       manifest.json provides metadata used when your web app is added to the
