--- a/Energize.Web/ClientApp/public/index.html
+++ b/Energize.Web/ClientApp/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#A51C15">
     <meta property="og:url" content="http://energize.earu.io/" />
     <meta property="og:title" content="Energize docs and dashboard" />
-    <meta property="og:description" content="Documentation and dashboard for the Energize Discord bot" />
+    <meta property="og:description" content="Documentation and dashboard for the Energize⚡ Discord bot" />
+    <meta property="og:image" content="./img/logo.png"/>
+    <meta property="og:site_name" content="Energize⚡"/>
     <base href="%PUBLIC_URL%/" />
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -19,15 +21,6 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous" />
     <link rel="icon" href="./img/icon.ico">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Energize⚡</title>
 </head>
 
