Current work on homepage

--- a/Energize.Web/ClientApp/public/index.html
+++ b/Energize.Web/ClientApp/public/index.html
@@ -24,7 +24,7 @@
         href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
         crossorigin="anonymous" />
-    <link rel="icon" href="./img/icon.ico">
+    <link rel="icon" href="%PUBLIC_URL%/img/icon.ico">
     <title>Energize⚡</title>
 </head>
 
